--- a/src/iTextSharp.LGPLv2.Core.FunctionalTests/iTextSharp.LGPLv2.Core.FunctionalTests.csproj
+++ b/src/iTextSharp.LGPLv2.Core.FunctionalTests/iTextSharp.LGPLv2.Core.FunctionalTests.csproj
@@ -1,32 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <VersionPrefix>1.0.0.0</VersionPrefix>
-    <LangVersion>latest</LangVersion>
-	<TargetFramework>net7.0</TargetFramework>
-    <AssemblyName>iTextSharp.LGPLv2.Core.FunctionalTests</AssemblyName>
-    <PackageId>iTextSharp.LGPLv2.Core.FunctionalTests</PackageId>
-    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\iTextSharp.LGPLv2.Core\iTextSharp.LGPLv2.Core.csproj" />
-	 <AdditionalFiles Include="$(MSBuildThisFileDirectory)BannedSymbols.txt" Link="Properties/BannedSymbols.txt" />
-  </ItemGroup>
+	<PropertyGroup>
+		<VersionPrefix>1.0.0.0</VersionPrefix>
+		<LangVersion>latest</LangVersion>
+		<TargetFramework>net9.0</TargetFramework>
+		<AssemblyName>iTextSharp.LGPLv2.Core.FunctionalTests</AssemblyName>
+		<PackageId>iTextSharp.LGPLv2.Core.FunctionalTests</PackageId>
+		<GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+		<GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+		<GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+		<GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\iTextSharp.LGPLv2.Core\iTextSharp.LGPLv2.Core.csproj" />
+		<AdditionalFiles Include="$(MSBuildThisFileDirectory)BannedSymbols.txt" Link="Properties/BannedSymbols.txt" />
+	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.BannedApiAnalyzers" Version="3.3.4">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 	</ItemGroup>
-  <ItemGroup>
-	 <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-	 <PackageReference Include="MSTest.TestAdapter" Version="3.6.3" />
-	 <PackageReference Include="MSTest.TestFramework" Version="3.6.3" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+		<PackageReference Include="MSTest.TestAdapter" Version="3.6.4" />
+		<PackageReference Include="MSTest.TestFramework" Version="3.6.4" />
+
+		<PackageReference Include="BitMiracle.LibTiff.NET" Version="2.4.649" />
+
+	</ItemGroup>
+	<ItemGroup>
+		<Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+	</ItemGroup>
 </Project>
